// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  padding: 0;
  margin: 0 0 1em;
  line-height: 2;
  color: inherit;
}

<p
  class="c0"
  style="color:orange;font-size:16px"
>
  some text1
  <span>
    some text2
  </span>
</p>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  padding: 0 1rem;
  margin: 18;
  line-height: 2;
  color: red;
}

<p
  class="c0"
>
  some text1
  <span>
    some text2
  </span>
</p>
`;
